# scheduler

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
ruslan_schedule/: db.sqlite3  manage.py
ruslan_schedule/apps/events/: models.py  permissions.py  serializers.py  views.py
ruslan_schedule/apps/events/migrations/: 0001_initial.py  0002_initial.py
ruslan_schedule/apps/users/: models.py  serializers.py  views.py
ruslan_schedule/apps/users/migrations/: 0001_initial.py
ruslan_schedule/ruslan_schedule/: asgi.py  settings.py  urls.py  wsgi.py
src/: manage.py
src/apps/events/: models.py
src/apps/events/api/: permissions.py  serializers.py  views.py
src/apps/events/migrations/: 0001_initial.py  0002_initial.py  0003_event_guests.py
src/apps/invitations/: models.py
src/apps/invitations/migrations/: 0001_initial.py
src/apps/users/: models.py
src/apps/users/api/: serializers.py  views.py
src/config/: urls.py
src/settings/: __init__.py  test.py
